<resources>
    <string name="app_name">Forum Chat</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="LoginText">Don\'t have account? <u><b>Sign up</b></u></string>
    <string name="SignUpText">Already have account? <u><b>Login</b></u></string>
    <string name="Forgot">Forgot the password? <u><b>Send reset email</b></u></string>

    <!--Dialog strings-->
    <string name="dialog_1">Dialog 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="delete_message_text">Do you really want to remove this message?</string>
    <string name="rate_message_text">Do you really want to mark this message as a response?</string>

    <string name="TextPreview">Welcome to the <b>Forum Chat!</b>\nHere you can quickly get an answer to any of your questions, if any.\nFirstly, you should confirm your mail by clicking on the appropriate button in the <b>Settings</b>.\nSecondly, it’s also recommended that you set your own avatar there and assign a nickname.\nTo ask a question, go to the <b>Forums</b> tab and click the button with a <b>+</b> sign.\nIf you want to look at question or find the one, go to the <b>Forums</b> tab, the search bar is also located here.\nIf you want to add a question to the tracked ones, you just need to click on the <b>Star</b> icon right in the question itself to find out when it will be answered.\nTo view the questions that you created or those that you marked as <b>Tracked</b>, go to the <b>Library</b> tab. Also here located <b>History of views.</b>\nWe also ask you to observe order and discipline when communicating with other users.\nHave a nice use!</string>

    <string name="change_message">Change message</string>
    <string name="delete_message">Delete message</string>
    <string name="change_question">Change question</string>
    <string name="delete_question">Delete question</string>
    <string name="question_name_create">Question name</string>
    <string name="question_content_create">Question content</string>
    <string name="push_on_public">Push on public</string>
    <string name="search">Search</string>
    <string name="clear_history">Clear history</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="camera_helper">Tap on camera to choose profile picture</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="verification">Verified</string>
    <string name="create">Create</string>
    <string name="latest_questions">Latest Questions</string>
    <string name="top_questions">TOP Questions</string>
    <string name="forum">Forum</string>
    <string name="library">Library</string>
    <string name="little_helper">FAQ</string>
    <string name="settings">Settings</string>
    <string name="created">Created</string>
    <string name="tracked">Tracked</string>
    <string name="history">History</string>
    <string name="communicate_item">Communicate</string>
    <string name="log_out">Log out</string>
    <string name="email_not_verified">Email Not Verified (Click to Verify)</string>
    <string name="setAnswer">SET answer</string>
    <string name="removeAnswer">REMOVE an answer</string>
    <string name="titleQiestionOptions">Question options</string>
    <string name="titleMessageOptions">Message options</string>
    <string name="rateOnSet">Do you really want to SET this message as a response?</string>
    <string name="rateOnRemove">Do you really want to REMOVE the tag from this message?</string>
    <string name="rateTitle">Title!</string>

    <!--Common-->
    <string name="cansel">Cancel</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>


    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />

    <!--About-->
    <string name="about_program">About program</string>
    <string name="message_aboutProgram">
        Program version 1.0\nThe program is not subject to a commercial company and is distributed for informational purposes only\nThe author of the program is not responsible for possible breakdowns inside the program, but regularly updates it at the request of testers\nAuthors:\nProgrammer: Vlasov T. S.\nDesigner: Vlasov T. S.\nTesters:\nAndrey Migutsky\nArthur Lange\nVictor Matveev\nMax Nirov\nIgor Ulyanov\nI\nThank you for using this product!
    </string>
    <string name="understand">Got it</string>
    <string name="track_question_got">Tracked question got answer!</string>
    <string name="track_question_change">Tracked question was changed!</string>
    <string name="track_question_delete">Tracked question was deleted!</string>
    <string name="click_to_open">Click to open</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="resend_email">Reset message sanded, check out your email</string>
    <string name="enter_email_to_reset">Enter the email address to send the password reset message</string>
    <string name="email_required">Email is required</string>
    <string name="enter_vaild_email">Please enter a valid email</string>
    <string name="password_required">Password is required</string>
    <string name="minimum_length_of_password">Minimum length of password should be 6</string>
    <string name="profile_uploaded">Profile Uploaded</string>
    <string name="verification_sent">Verification email sent</string>
    <string name="deleted_question_on_view">It looks like the question was just deleted</string>
    <string name="verification_check">You can not create messages without verification</string>
    <string name="not_authorized">User not authorized</string>
    <string name="email_verified">Email Verified</string>
    <string name="delete_account">Delete account</string>
    <string name="sure_delete_account">Are you sure want delete account?</string>
    <string name="alert">Alert!</string>


</resources>
