<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreateQuestionActivity"
    android:padding="15dp">

    <EditText
        android:id="@+id/question_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_name_create"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/question_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_content_create"
        android:textSize="20dp" />
    <Button
        android:id="@+id/submit_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push_on_public"
        android:layout_gravity="center"
        />
</LinearLayout>